# vds-usbip

./: .gitignore  99-vds-dualsense-udev.rules  99-vds-dualsense-wireplumber.conf  99-vds-dualsense.conf  CMakeLists.txt  HANDOFF.md  README-LINUX.md  README-WINDOWS.md  README.md  bringup.ps1  build.ps1  generate-version.sh  generate_version.ps1  hidhide_setup.ps1  hidhide_teardown.ps1  install-service.sh  install_env.ps1  install_service.ps1  launch.ps1  logrotate-vds.conf  override-bluetoothd.sh  run_vdsd.ps1  run_vdsd_debug.ps1  run_vdsd_gain.ps1  stop_service.ps1  uninstall-service.sh  uninstall_env.ps1  uninstall_service.ps1  vds-autostart.ps1  vdsd.service.in  wasapi_test_tone.cpp
.github/workflows/: build-all.yaml
cmake/: generate_build_info.cmake
include/uapi/: vds.h
include/vds/: ds5.h  ds5_protocol.h  ds5_usb.h
installer/: README.md  vds.iss
installer/redist/: README.md
module/: Kbuild  Makefile  dkms.conf  dualsense.c  dualsense_edge.c  vds_controller.h  vds_hcd_core.c  vds_usb.h  vds_usb_core.c
packaging/ArchLinux/: BUILDINFO.in  PKGINFO.in  build-arch.sh  vds.install.in
packaging/debian/: build-deb.sh  control.in  postinst  postrm  prerm
packaging/windows/: build_installer.ps1
packaging/windows/launcher/: driver_script_runner.cc  root_device_installer.cc  setup_actions.cc  setup_launcher.cc  uninstall_runner.cc
packaging/windows/wix/: DriverFilter.wxs  DriverUsb.wxs  Product.wxs
src/: jsonl.cc  jsonl.hh  unique_fd.hh  vds_bluez.cc  vds_bluez.hh  vds_bt.cc  vds_bt.hh  vds_common.cc  vds_common.hh  vds_config.cc  vds_config.hh  vds_fs.hh  vds_log.cc  vds_log.hh  vds_profile.hh  vds_protocol.cc  vds_protocol.hh  vds_udev.cc  vds_udev.hh  vdsctl.cc  vdsctl_common.cc  vdsctl_common.hh  vdsd.cc  vdsd_common.cc  vdsd_common.hh
src/platform/linux/: vds_bluez.cc  vds_bluez.hh  vds_bt.cc  vds_bt.hh  vds_fs.cc  vds_fs.hh  vds_io.cc  vds_io.hh  vds_udev.cc  vdsctl.cc  vdsd.cc
src/platform/win32/: unique_handle.hh  vds_bt.cc  vds_bt.hh  vds_fs.cc  vds_io.cc  vds_io.hh  vds_usbip.cc  vds_usbip.hh  vds_win32.cc  vds_win32.hh  vdsctl.cc  vdsd.cc
ui/VdsTray/: App.xaml  App.xaml.cs  Autostart.cs  ConnectionPopup.xaml  ConnectionPopup.xaml.cs  Vds.cs  VdsTray.csproj
ui/VdsTray/assets/: README.txt
windrv/: build.ps1  generate_version.ps1  install.ps1  reload.ps1  uninstall.ps1
windrv/vds_filter/: build_install.ps1  reload.ps1  vds_filter.c  vds_filter.inf  vds_filter.vcxproj
windrv/vds_usb/: build_install.ps1  reload.ps1  vds_usb.c  vds_usb.inf  vds_usb.reg  vds_usb.vcxproj
